Revert "Merge branch 'develop' into sriley/ENT-3823-sub-api-for-table"
This reverts commit b71d5785ee8c58461ae32f0c957ba067fbfaf540, reversing
changes made to ba41f8cbb37b2f787a0cffed86a5238faee9a630.
