# api/rhsm-subscriptions-api-spec.yaml
@@ -1401,6 +1401,92 @@ components:
           type: string
         detail:
           type: string
+    # rhsm-conduit JSON schemas below. These are here to ease porting of rhsm-conduit to this repo, but should
+    # be removed eventually
+    ConsumerInventory:
+      # Container for fields we capture from the IT endpoint for upload to inventory service.
+      required:
+        - subscription_manager_id
+        - org_id
+      properties:
+        subscription_manager_id:
+          type: string
+        insights_id:
+          type: string
+        org_id:
+          type: string
+        account_number:
+          type: string
+        bios_vendor:
+          type: string
+        bios_version:
+          type: string
+        bios_uuid:
+          type: string
+        ip_addresses:
+          type: array
+          items:
+            type: string
+        fqdn:
+          type: string
+        display_name:
+          type: string
+        mac_addresses:
+          type: array
+          items:
+            type: string
+        cpu_sockets:
+          type: integer
+        cpu_cores:
+          type: integer
+        cores_per_socket:
+          type: integer
+        last_checkin:
+          type: string
+          format: date-time
+        memory:
+          type: integer
+          format: int64
+        system_memory_bytes:
+          type: integer
+          format: int64
+        architecture:
+          type: string
+        cloud_provider:
+          type: string
+        is_virtual:
+          type: boolean
+        vm_host:
+          type: string
+        vm_host_uuid:
+          type: string
+        guest_id:
+          type: string
+        rh_prod:
+          type: array
+          items:
+            type: string
+        sys_purpose_role:
+          type: string
+        sys_purpose_sla:
+          type: string
+        sys_purpose_usage:
+          type: string
+        sys_purpose_addons:
+          type: array
+          items:
+            type: string
+        sys_purpose_units:
+          type: string
+        billing_model:
+          type: string
+
+    OrgInventory:
+      properties:
+        consumer_inventories:
+          type: array
+          items:
+            $ref: "#/components/schemas/ConsumerInventory"
 
     SkuCapacitySubscription:
       properties:
